[project]
name = "aws-tools"
version = "0.1.0"
description = "Data engineer toolkit for AWS services"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "amazon-kclpy==2.0.6",
    "boto3>=1.24.34",
    "botocore>=1.27.34",
    "ipython>=8.4.0",
    "mimesis>=5.5.0",
    "duckdb>=0.10.0",
    "pandas>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[project.scripts]
export-metadata = "scripts.export_metadata:main"
kinesis-cli = "scripts.kinesis_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["s3", "kinesis", "glue", "scripts"]

[tool.ruff]
target-version = "py39"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused import
"tests/*" = ["ARG"]       # unused arguments in tests
"scripts/export_metadata.py" = ["F841"]  # df is used in SQL query

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
managed = true
dev-dependencies = [
    "ruff>=0.8.0",
]